@@ -10,6 +10,11 @@
 
 <UL>
 
+	<H3>New Features</H3>
+
+	<LI>HTMLDOC now supports a full alpha channel in PNG
+	files.
+
 	<H3>Bug Fixes</H3>
 
 	<LI>HTMLDOC tried to format tables with no rows or
